Remove env variable KONSOLE_PROFILE_NAME

env variables can not be changed after process creation so this
causes this variable to be wrong after profile switching.  Use the
dbus method profile to determine name.
qdbus $KONSOLE_DBUS_SERVICE $KONSOLE_DBUS_SESSION profile

BUG:406955